tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_missing_associated_type/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: `Foo` is missing the associated type `Assoc`
  ┌─ src/main.nr:6:10
  │
6 │     impl Foo for () {}
  │          ---
  │

Aborting due to 1 previous error
