tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_missing_associated_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: `Foo` is missing the associated type `Assoc`
  ┌─ src/main.nr:6:10
  │
6 │     impl Foo for () {}
  │          ---
  │

Aborting due to 1 previous error
